--- a/WolfPaw ScreenSnip/f_SettingPanel.resx
+++ b/WolfPaw ScreenSnip/f_SettingPanel.resx
@@ -117,4 +117,74 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_Pen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAH9JREFUOE/tk0ENgDAQBGsDA8jBCA6wgAU0YAIXmIEdkk1Iw4P2eDVMMo8+bnKP
+        XmqOXu5yul5BiB03Z1kNsU5uMhz1ZsSeokU4tkhCeXSQr8lj3sjRT2K2sRgfNw9hUQxGyVbA/wrFgCDD
+        PqtVVsfAQd9qKAYMs5UNxX5qSekEgiBF1mTie5oAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btn_Marker.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAMhJREFUSEvtlIEJwkAQBFOADdiADdiAFViBHdiBLdiLTdiFzZgd8OB4bpNDQRAc
+        GILwP1ySN9O32MiTvDW9yL1chOhdPt/wIC1HWW3qyECWs6w2ZQlwZ9UQlk6Y5x+McctSmEm3ryvBgBcY
+        aywuHFGmjRdM/KOJI3qVRIHrQ45rLWO4ikL14tCSw0SJcfg7UbTkMDF+d6NoyWFgWiaHtShaxjDsZCeK
+        Fo5TLMofmrzZySmx8DyrTR3zP7IkjleeeM3FL9ufn2OaZiKdualYI1rmAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_Line.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAADhJREFUOE9jGAUjDDgA8X8S8RwgxgmygRibJnx4HRDjBFQ3UA2IQV4AKSIW+wHx
+        KBgFo4BEwMAAAJ65L3WseA30AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_Square.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAHdJREFUOE9joDVQA+J1ROJsIMYLJIH4PxB3A7ExARwDxCC1eA0FSR6GMIkCIENB
+        LsUJQAbiVYAGQC4dNRAVjBpIEBA00A+IbwExD5hHGIByFF4DQQaBcgrIUJBCfBikDpT1QHkfLwAZCnIp
+        yPuEMCjvj4LBDxgYAJWaLgu7tQHIAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_Oval.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAMVJREFUOE/tklENwkAQRE8ABjCAAQygAAU4wAEWsIAGTOACMzDvkkk2F/a2/eCD
+        hJdMSukw3Vum/Swb6SQ9pFfQTTpIq9hJY9AognlpCSb/iNA4jaeOoSVXyWHZBJzAoUe+yNhKNvJ5BkH4
+        nv0uwaZFRxF+ebrLs4SB6xLuEv59v/vA2kA3IQ3kAQaMFXHfU2yqysue8dGKKbFn2VG8GlS1oeMuIhZP
+        ABNzpSZ+Nu3gSJx0FKHpHzGDfjHFRWJnnvTPV2ntDcmlRqLX9xm4AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_Text.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAALBJREFUOE/tk9ENgjAURTsAC7iAC7iAEzCBG7gBK7iCM7iEW7gM3gO5yYPUaEu/
+        iCc5SaH08toHaRd08jQP23CRo2wW+pIE3qerjVAVYfYgN3GTT+nAQVZDM1yVt43V9PIxD9NVOpD7VbBV
+        L6ZKB3K/mBiQ8yiL4PBpSOQsHbie+8qnKmJzaNpPUAkLcxQ1hzcSxqETyDh+yHzkHIUDc88sYAEVROP/
+        u56zzf7xP5DSG5QTNLM0LQtEAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_Eraser.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAHpJREFUOE/tkkENgDAMRScAHehAAUZwgAW8YAIXmIH/Dr0s3dJeOJC95GUX8rqs
+        lMFn7PJsOMsUh3w6LjLMJr2IybAwq/QiZirGu3gR85KTDEHslt4C0jE+JOZtzgaFt0qM6bxdTToGbJQg
+        Z21rUBdu6MUw9a8N/k0pL2WANfXL3YsjAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_Dock.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEOSURBVFhH7ZUBDcJADEUnAAMYwAAGUIACHOAAC3jBBC4w
+        A/0hTZpb+3f0boSE+8lLWLJe33Y9No38Yg7Ck3ARvGTrZjkL3gJKVuAmVIUJXAWWo+DVgWaB2gVOQks9
+        fQN4QpaNcBe82i4CIJJgzUFKAHvu7Wsp4TUvaz8WsAPHJKLmGq2tFsCCGKQyngTuY801OKK798+2eBIW
+        r3n3RBJfaY5gix5CKaAzsWqWjtqqEl5zTLa9Bs0S+lGxC7Gj5s2ErcX0Y8tSX0MsxJprIgk01+v0X3E5
+        cNG0exKWtIBl6agxiWaB2gVa6+kbwBOy2D0v6SIAIgnWHHQTiBbK1s2CY7cnbAUv2bqRkb/ONL0ARx4S
+        LSg0pJ4AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
