--- a/WolfPaw ScreenSnip/Properties/Resources.resx
+++ b/WolfPaw ScreenSnip/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="handle_tall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\handle_tall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="histogram_dll" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\histogram_dll.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
