--- a/WolfPaw ScreenSnip/uc_CutoutHolder.resx
+++ b/WolfPaw ScreenSnip/uc_CutoutHolder.resx
@@ -117,4 +117,75 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_Up.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADhSURBVDhP7ZJRDQIxEEQrAAMYwAAGUIACHOAAC1hAAyZw
+        gRnYV/KSTWl74YMPEiaZXLvdzs1ut/wsVsFD8BZ8JF6Cu+BH2ARboZYI89NFkOQlRLMbXWfRRZyDiumA
+        7/G1rKACRfcERlgHTWQNELN8fiYQInavuwFMspQsJrOoMSt5A2WRYHl8r0Ev4oa9ffVsW3cdtILCi21c
+        90NBDkggMaMnmPs9hUl5XHqC9JlY7mkXec4shTFh7cvbGmhsCmcR4g4BHPPlYTybzmCL7LQlosOHmIH5
+        wsUpSM90+sdXUcoT3ThZYhEupR0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="tt_Tip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="btn_Down.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADeSURBVDhP7ZJRDQJBDAVXAAYwgAEMoAAFOMABFrCABkzg
+        AjPQIZmkaa538MEHCZO8wPW6b9tex8+yCh1Ct9Aj6RLahT5iE6pGVRhz6SIkeQjTXI1VZ9NFziHNrOAY
+        uoY0pwNN9wQ61iET+S+YEcNYMCJ2fz01mFRbmTIEYqidJQfyQVrbhvxAjINnq/ciYpNUQyuu4iLwotaQ
+        FySQKNVUszzvWUzK66KpZsCciTGGWfKe5Vby4B0NytvQ4i4iBo8BFfPLmviOyt8mV1qFafsh5qBNqjiF
+        mJmV/vkqYzwBZoNZfIqMPbwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btn_Save.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACwSURBVEhL7ZTRCQIxEAVTgHXYgA1YgRXYgR3Ygi1Yg03Y
+        hc14b8QHSyRh90fk8MGQhGzmCMulfSNbcRW3BEexEamcxFNwkDFi4eO9ZryLlBwxh0kvdlyDEHFKXhGT
+        tLwqJpZfXqtBZmL2vB/FZC/ixz8SxWdhSc9BxOxEWlzJb4i5rq8+gobRvJKYQrrdyyLUIC2LOTDLysU8
+        LowU0hzmI1wDUzHPphtThR/qn3WktQVb3XGrMm9zqAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btn_Copy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADFSURBVEhL7ZThDYIwEEY7AHO4gAs4gRO4AaO4gjO4BFu4
+        jN4LfsmluZ6xQPjDl7y0Ke3jCoWyVwbjXMHYolyNd8DD6I6XUqVC/zl3/4+kalcReymJxC+Dx8ENPBcj
+        DIsQgSbXYhZrDuNiMkYjDBeohlbcDOVkILx/Wx+KSMVMiCIpj0g78+kS+0qRsotVxLwoRJ76LHeJGaPS
+        LPuJ2SaTPIwtEkc/HOCM0mZJxa2waDMxR8zvoib98lphAfJfNP8VR7ZIKR92tVJuWLOlIgAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="btn_Delete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACSSURBVEhL7ZThCYAgEEYdoAWaowWaoEXaoKFaoi1apu4R
+        J4ekHvkvfPBAzvw4TjJUGMU1kVoTBFwZB/Ezm3g+ywiBBNO5m0XcjdqdreXqs5iFzUPUg16rwTCJb4dL
+        urDBzFhnSp2uNMiOxIUN1gtiTV33oAfHoB4cg5qCUf9E3gy0NdWNPeTRTfoYleTbzr8I4QYRh4xzR7TV
+        1AAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pb_btn_OriginalSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADDSURBVDhP7ZJhDQIxFIMn4AxgAANnAAUoOAfnAAtYQAMm
+        cIEZaEOaNOUtjMAfEpp8yV321q3vrf2UFnALjsB1BVmzBaVW4IUXMAEXN3sNmUGpNMzbUTyAB3ndS0OP
+        5aaVGekasoeKuQfaQNM0Y3TF7/Yw5abOsEGlnPxHZlXPqkF1xdN3j88nM38BbsoErC2lTRqODBQzB0X4
+        PfwOSfasGtSwIf8rnYHXvXVD9VRSTKdryAWe7jCi6wB8/QQ24K+vqbU74oNqDLCG63UAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="btn_FitSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACbSURBVDhP7ZLRCcMwDAW9RhfoAlmgE3SR7pYlMliqo3lG
+        GDk2tj978EAI+YhEUgePK0t4Ws4r1FN42RLpx7JbJKOmN42EQ7DS61dmIiEzzfV1M1bzREKdoiqVbCSh
+        lBWi4Z6UJ8q8LQwcls1FD32PGXq8uYWB8teQ0MNMU1YjEg7BbfgSCamr9+pBN/UZXlN46bRMIFom+9Mi
+        pS9CDUnxpa/pdgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
